Added UserController/GetListingsForUser which automatically filters listings owned by the user and their favorite listings from the stack
